@@ -1,0 +1,8 @@
+" Install the vim-localvimrc plugin at:
+"   https://github.com/embear/vim-localvimrc
+" Which will automatically load this file when editing
+" files in this repository.
+
+set tabstop=8
+set shiftwidth=4
+set softtabstop=4
