@@ -1,5 +1,4 @@
 name     = Geo-Coordinates-GMap
-abstract = Routines for converting decimal lat/lon to Google Map tiles, and back again.
 author   = Aran Deltac <bluefeet@gmail.com>
 license  = Perl_5
 copyright_holder = Aran Deltac
@@ -11,20 +10,28 @@ copyright_holder = Aran Deltac
 format = %-9v %{yyyy-MM-dd}d
 
 [@Git]
+
 [Git::NextVersion]
 first_version = 0.01
 
 [Repository]
+
 [PkgVersion]
 [PodCoverageTests]
 [PodSyntaxTests]
 
-[Bugtracker]
-[CompileTests]
+[GithubMeta]
+issues = 1
+
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = pod
+filename = README.pod
+location = root
 
 [Prereqs]
 Exporter = 5.57
+strictures = 0
 
-[Prereq / TestRequires]
+[Prereqs / TestRequires]
 Test::Simple    = 0.94
 
